@@ -1,3 +1,8 @@
+2000-11-01  Havoc Pennington  <hp@redhat.com>
+
+	* gtk/gtkimage.c (gtk_image_expose): Um, don't randomly subtract 4
+	from coordinates.
+
 Wed Oct 25 20:10:57 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/gdkevents.c (gdk_event_copy): Only ref the window if
