@@ -586,7 +586,8 @@ gtk_image_expose (GtkWidget      *widget,
                                                    image_bound.y - y,
                                                    image_bound.x,
                                                    image_bound.y,
-                                                   image_bound.width, image_bound.height,
+                                                   image_bound.width,
+                                                   image_bound.height,
                                                    GDK_PIXBUF_ALPHA_FULL,
                                                    128,
                                                    GDK_RGB_DITHER_NORMAL,
@@ -601,9 +602,10 @@ gtk_image_expose (GtkWidget      *widget,
                                                        widget->window,
                                                        image_bound.x - x,
                                                        image_bound.y - y,
-                                                       image_bound.x - 4,
-                                                       image_bound.y - 4,
-                                                       image_bound.width, image_bound.height,
+                                                       image_bound.x,
+                                                       image_bound.y,
+                                                       image_bound.width,
+                                                       image_bound.height,
                                                        GDK_PIXBUF_ALPHA_FULL,
                                                        128,
                                                        GDK_RGB_DITHER_NORMAL,
